<resources>
    <string name="app_name">ProyectoFinal</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="emailHint">Email</string>
    <string name="passwordHint">Contraseña</string>
    <string name="nameHint">Nombre</string>
    <string name="weightHint">Peso</string>
    <string name="birthDateHint">Fecha de Nacimiento</string>

    <string-array name="sangre">
        <item>O+</item>
        <item>O-</item>
        <item>A+</item>
        <item>A-</item>
        <item>AB+</item>
        <item>AB-</item>
        <item>B+</item>
        <item>B-</item>
    </string-array>

    <string name="nutriologoNameHint">Nombre del Nutriologo</string>
    <string name="consultationDateHint">Fecha de la consulta</string>
    <string name="consultationWeightHint">Peso registrado</string>
    <string name="consultationSizeHint">Talla Registrada</string>
    <string name="consultationObservationsHint">Obervaciones</string>
</resources>
